@@ -2,6 +2,10 @@ Cascading Change Log
 
 2.0.0 [unreleased]
 
+  Changed c.f.Flow to lazily test child source taps for modified time to reduce file meta-data queries.
+
+  Changed c.t.CompositeTap#getChildTaps to return an j.u.Iterator to allow for lazy resolution of child tap instances.
+
   Added "cascading.default.comparator" property to allow for a default j.u.Comparator class to be set and used
   if no Comparator is returned by the c.t.Comparison interface or set on a c.t.Fields instance.
   See c.t.h.TupleSerialization for the static accessor.
